@@ -76,6 +76,16 @@ Release ...
 * nawk: RLENGTH was not set correctly for matches of zero length.
 * file: The POSIX version does not exit with an error status if a file could
   not be opened.
+* pax: The -pa and -pme option combinations now work.
+* pax: The -po option works for users other than root (but only affects the
+  group ownerships then).
+* pax: Without -ro or -re, set[ug]id bits are not preserved.
+* pax: A '&' in the replacement string for the '-s' option did not work.
+* pax: The '-b' option now accepts a 'b' (multiply by 512) suffix.
+* pax: The '-u' option is now respected in read mode too.
+* pax: The '-n' option in read mode does not mark a pattern as used if it
+  matched an archive entry but that entry was not selected due to '-u'.
+* pax: If link() fails, no separate copy of an archive entry is created.
 
 Release 050123
 * tr: The highest acceptable wide character for complementing strings is now
